--- a/main.css
+++ b/main.css
@@ -22,6 +22,9 @@
 	font-style: normal;
 	font-variation-settings: "wdth" 100;
 }
+.over-hide {
+	overflow: hidden;
+}
 .background {
 	background: linear-gradient(
 		45deg,
@@ -30,7 +33,7 @@
 		#5d2660 85%,
 		#c25a72 100%
 	);
-	height: 100vh;
+	height: 100%;
 	backdrop-filter: blur(100px);
 	background-attachment: fixed;
 }
@@ -278,15 +281,16 @@
 /* about */
 
 .aboutBox {
-	position: absolute;
+	position: fixed;
 	top: 0;
-	/* left: 10%; */
+	left: 0;
 	background: #f5f5f5;
 	width: 100%;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
 	z-index: 100;
+	overflow-y: auto;
 }
 .aboutBoxContent {
 	padding: 20px;
